tests/baselines/reference/unusedLocalsAndParametersTypeAliases2.errors.txt
tests/cases/compiler/unusedLocalsAndParametersTypeAliases2.ts(3,6): error TS6133: 'handler1' is declared but never used.
tests/cases/compiler/unusedLocalsAndParametersTypeAliases2.ts(7,10): error TS6133: 'handler2' is declared but never used.


==== tests/cases/compiler/unusedLocalsAndParametersTypeAliases2.ts (2 errors) ====
    
    // unused
    type handler1 = () => void;
         ~~~~~~~~
!!! error TS6133: 'handler1' is declared but never used.
    
    
    function foo() {
        type handler2 = () => void;
             ~~~~~~~~
!!! error TS6133: 'handler2' is declared but never used.
        foo();
    }
    
    export {}